# tilecache

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  conda_requirements.txt  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  codeql.yml
src/TileCache/: Cache.py  Client.py  Layer.py  Service.py  __init__.py  base.py
src/TileCache/Caches/: Memcached.py
src/TileCache/Layers/: WMS.py
src/TileCache/Services/: TMS.py  WMS.py  __init__.py
tests/: test_import.py  test_memcached.py  test_service.py  test_wsgi.py  tilecache.cfg
