[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "tilecache"
description = "A web map tile caching system"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "requests",
]

urls."homepage" = "https://github.com/akrherz/tilecache"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.ruff]
target-version = "py310"

line-length = 79
lint.select = [
  "B", # bugbear
  "E",
  "F",
  "I",
  "R",
  "T",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:numpy.ndarray size changed:RuntimeWarning",
  "ignore:'cgi' is deprecated and slated for removal:DeprecationWarning",
]
