[metadata]
name = TileCache
author = daryl herzmann
author_email = akrherz@gmail.com
url = https://github.com/akrherz/tilecache
keywords = GIS
license = Apache
license-file = LICENSE
description = forked version of OSGeo/tilecache
description-file = README.md

[pep8]
ignore = W503

[aliases]
test = pytest

[options]
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
setup_requires = setuptools_scm

[options.packages.find]
where = src
